--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -79,7 +79,7 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#numbers">
-      Numbers
+      Number Lore
     </a>
   </li>
   <li class="nav-item">
@@ -93,8 +93,8 @@
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#testimonials">
-      Testimonials
+    <a class="nav-link" href="#products">
+      Products
     </a>
   </li>
 
