--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta name="description"
         content="A growing collection of ready to use components for the CSS framework Bootstrap 5">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="96x96" href=".t/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href=".t/img/favicon.png"> -->
+    <link rel="icon" type="image/png" sizes="96x96" href="https://cdn.discordapp.com/attachments/865537081073860609/1319241616699166731/89557a95adc647e4.png?ex=6781973f&is=678045bf&hm=89fe7985a2eae4a3657bc0aca52782098a1e3faae16225f8c25a289e496c55dc&">
     <meta name="author" content="Holger Koenemann">
     <meta name="generator" content="Eleventy v2.0.0">
     <meta name="HandheldFriendly" content="true">
@@ -138,6 +139,8 @@
                         <h1 class="display-1 fw-bold mt-5">Sell more useless stuff faster!</h1>
                         <p class="lead">To be honest, this is just a silly placeholder text. We don´t know how to sell
                             anything, not even lesser or slower as you. But ILY :3</p>
+                            <a href="https://onepagelove.com/templates/free-templates">Idk why I put this but thanks to "this"</a>
+                            <br>
                         <a href="#" class="btn btn-dark btn-xl shadow me-3 rounded-0 my-5">Get started free</a>
                     </div>
 
